# ARA-Autonomous-Refactoring-Agent

./: .env  .env.example  Dockerfile  README.md  context.txt  docker-compose.yml  pyproject.toml  requirements.txt  test_llm_direct.py  test_output.txt
frontend/: app.js  index.html  styles.css
scripts/: e2e_test.py  test_mock.py  trigger_demo.py
src/ara/: __init__.py  config.py  logging_config.py
src/ara/api/: __init__.py  main.py  workflow_manager.py
src/ara/context/: __init__.py  dependency_graph.py  rag.py  rag_context.py
src/ara/graph/: __init__.py  builder.py  router.py
src/ara/llm/: __init__.py  provider.py
src/ara/nodes/: __init__.py  analyzer.py  generator.py  human_review.py  reflector.py  validator.py
src/ara/persistence/: __init__.py  database.py
src/ara/state/: __init__.py  models.py  schema.py
src/ara/tools/: __init__.py  docker_sandbox.py  file_ops.py  sandbox.py  subprocess_runner.py
src/ara/transforms/: __init__.py  base.py  cleanup.py  deprecated_api.py  registry.py  rename.py  type_hints.py
tests/test_api/: __init__.py  test_api.py
tests/test_context/: __init__.py  test_context.py
tests/test_integration/: __init__.py  test_graph.py
tests/test_nodes/: __init__.py  test_nodes.py
tests/test_state/: __init__.py  test_models.py  test_schema.py
tests/test_tools/: __init__.py  test_sandbox.py
tests/test_transforms/: __init__.py  test_transforms.py
